--- a/symfony-angular/app/Resources/views/default/index.html.twig
+++ b/symfony-angular/app/Resources/views/default/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <calendar>Loading...</calendar>
+    <app-calendar>Loading...</app-calendar>
 {% endblock %}
