--- a/symfony-angular/web/src/app/week/weekView.component.html
+++ b/symfony-angular/web/src/app/week/weekView.component.html
@@ -1,3 +1,15 @@
-<p>
-    week works!
-</p>
+<section class="section_dates container">
+    <div class="row">
+
+        <div class="daysOfWeek">
+            <div class="dayHead" *ngFor="let day of month.daysOfWeek">
+                {{ day }}
+            </div>
+        </div>
+
+
+
+    </div>
+
+</section>
+<br><br><br>
