start work on day view

--- a/symfony-angular/web/src/app/app.component.html
+++ b/symfony-angular/web/src/app/app.component.html
@@ -34,10 +34,14 @@
 </header>
 
 <app-month-view *ngIf="currentView === 'month'"
-        [cD]="currentDate">
+                [cD]="currentDate">
 </app-month-view>
 
 <app-week-view *ngIf="currentView === 'week'"
                 [cD]="currentDate">
 </app-week-view>
+
+<app-day-view *ngIf="currentView === 'day'"
+               [cD]="currentDate">
+</app-day-view>
 
