--- a/symfony-angular/web/src/app/month/calendarMonthView.component.html
+++ b/symfony-angular/web/src/app/month/calendarMonthView.component.html
@@ -7,7 +7,7 @@
             </div>
         </div>
 
-        <div class="nonthCellDateContainer monthCell">
+        <div class="cellDateContainer">
             <app-note *ngFor="let day of prevMonthDateArray"
                   [day]="day" class="dayCell grey">
             </app-note>
