--- a/symfony-angular/web/src/app/month/calendarMonthView.component.sass
+++ b/symfony-angular/web/src/app/month/calendarMonthView.component.sass
@@ -5,11 +5,6 @@
 .daysOfWeek
   height: 5vh
 
-.monthCell
-  display: flex
-  flex-wrap: wrap
-  height: 100%
-
 .dayCell
   width: 14.285%
   height: 13.3vh
@@ -34,5 +29,8 @@
 .grey
   background-color: $lightGray
 
-.nonthCellDateContainer
+.cellDateContainer
   border: 1px solid grey
+  display: flex
+  flex-wrap: wrap
+  height: 100%
