--- a/symfony-angular/web/src/app/week/weekView.component.sass
+++ b/symfony-angular/web/src/app/week/weekView.component.sass
@@ -5,6 +5,12 @@
 .daysOfWeek
   height: 5vh
 
+.dayCell
+  width: 14.285%
+  height: 13.3vh
+  border: 1px solid $textDark
+  position: relative
+
 .dayHead
   float: left
   width: 14.285%
@@ -16,3 +22,15 @@
   text-align: center
   word-break: break-all
   overflow: hidden
+
+.active
+  background-color: $accent
+
+.grey
+  background-color: $lightGray
+
+.cellDateContainer
+  border: 1px solid grey
+  display: flex
+  flex-wrap: wrap
+  height: 100%
